// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credit should render an external credit 1`] = `
<span>
   
  <a
    className="tag"
    href="https://curiousprogrammer.dev"
    rel="nofollow noopener noreferrer"
    target="_blank"
    title="Curious Programmer"
  >
    curious programmer
  </a>
   
  Curious Programmer
</span>
`;

exports[`Credit should render an internal credit 1`] = `
<span>
   
  <a
    className="tag"
    href="/blog"
    title="Curious Programmer"
  >
    curious programmer
  </a>
   
  Curious Programmer
</span>
`;
